--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,18 @@
  */
 
 plugins {
+    id 'application'
     id 'java'
     id 'maven-publish'
     id 'antlr'
 }
 
+application {
+    mainClass = 'com.kanatti.jackson.Test2'
+}
+
 repositories {
-    mavenLocal()
-    maven {
-        url = uri('https://repo.maven.apache.org/maven2/')
-    }
+    mavenCentral()
 }
 
 dependencies {
@@ -21,7 +23,14 @@ dependencies {
     implementation 'javax.el:javax.el-api:2.2.4'
     implementation 'org.glassfish.web:javax.el:2.2.4'
     antlr "org.antlr:antlr4:4.7.1"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
     testImplementation 'junit:junit:4.11'
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 group = 'com.kanatti'
@@ -39,6 +48,15 @@ publishing {
         }
     }
 }
+
+java {
+    sourceSets {
+        main {
+            annotationProcessorPath = configurations.annotationProcessor
+        }
+    }
+}
+
 
 test {
     testLogging {
