--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,15 @@ dependencies {
     implementation 'org.hibernate:hibernate-validator:5.1.3.Final'
     implementation 'javax.el:javax.el-api:2.2.4'
     implementation 'org.glassfish.web:javax.el:2.2.4'
+
     antlr "org.antlr:antlr4:4.7.1"
+
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+
+    implementation 'io.netty:netty-all:4.1.115.Final'
+
     testImplementation 'junit:junit:4.11'
 
     // Lombok
