--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,15 @@ dependencies {
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+    // lucene
+    implementation 'org.apache.lucene:lucene-core:7.7.3'
+    implementation 'org.apache.lucene:lucene-analyzers-common:7.7.3'
+
+    // SLF4J API
+    implementation 'org.slf4j:slf4j-api:1.7.30'
+    // Logback binding for SLF4J
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
 }
 
 group = 'com.kanatti'
