Add simple SQL antlr example with visitor

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,10 @@ java.targetCompatibility = JavaVersion.VERSION_21
 
 sourceSets.main.antlr.srcDirs = ['src/main/antlr']
 
+generateGrammarSource {
+    arguments += ['-visitor']
+}
+
 
 publishing {
     publications {
